--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -22,8 +22,17 @@
 \usepackage{setspace}
 \usepackage{braket}
 \usepackage[font=small,format=plain,labelfont=bf,up,textfont=normal,up,format=hang]{caption}
+
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric, arrows}
+
 \usecolortheme{crane}
 
+\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black, fill=red!30]
+\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=blue!30]
+\tikzstyle{process} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=orange!30]
+\tikzstyle{decision} = [diamond, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=green!30]
+\tikzstyle{arrow} = [thick,->,>=stealth]
 
 \addbibresource{refs.bib}
 
@@ -59,18 +68,37 @@
 \begin{frame}
 \frametitle{Motivation}
 \begin{itemize}
-	\item Most non-linear PDEs have interaction b/w many scales
-	(turbulence) and local phenomenon (shocks), can be naturally
-	represented in wavelet bases.
-	\item Due to inherent property of adaptivity, less number of points are used at lower gradients, which results in reduced computational cost.
-	\item Wavelets can approximate the function at multiple scales, by automatically filtering smooth and non-smooth parts.
-	\item Sparse representation of non-standard operators takes
-	$O(N\log N)$ time for $A*u$
+	\item something
 \end{itemize}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{frame}
+\frametitle{Overall flow of the Process}
+\begin{figure}
+	\centering
+	\begin{tikzpicture}[node distance=2cm]
+	
+	\node (start) [startstop] {Video};
+	\node (frame) [io, below of=start] {Frame};
+	\node (detect) [process, right of=frame, xshift=2cm] {Detect face};
+	\node (recognize) [process, right of=detect, xshift=2cm] {Recognize face};
+	\node (outframe) [io, below of=recognize , yshift=-1cm] {Output frame};
+	
+	\draw [arrow] (start) -- (frame);
+	\draw [arrow] (frame) -- (detect);
+	\draw [arrow] (detect) -- (recognize);
+	\draw [arrow] (detect) -- node[anchor=east , xshift=-0.5cm] {Add Rectangle} (outframe);
+	\draw [arrow] (recognize) -- node[anchor=west] {Add Name} (outframe);
+	
+	\end{tikzpicture}
+	\caption{Flowchart}
+\end{figure}
+	
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}
     \centering
