--- a/report/ref.bib
+++ b/report/ref.bib
@@ -29,3 +29,30 @@ note = {Accessed: 2018-05-05}
 	howpublished={\url{https://opencv.org/platforms/opencl.html}},
 	note = {Accessed: 2018-05-05}
 }
+
+@article{990517, 
+	author={P. Viola and M. Jones}, 
+	booktitle={Proceedings of the 2001 IEEE Computer Society Conference on Computer Vision and Pattern Recognition. CVPR 2001}, 
+	title={Rapid object detection using a boosted cascade of simple features}, 
+	year={2001}, 
+	volume={1}, 
+	number={}, 
+	pages={I-511-I-518 vol.1}, 
+	ISSN={1063-6919}, 
+	month={}
+}
+
+@InProceedings{10.1007/978-981-10-5272-9_20,
+	author="Kirdak, Varsha
+	and Vegad, Sudhir",
+	editor="Reddy, M. Sreenivasa
+	and Viswanath, K.
+	and K.M., Shiva Prasad",
+	title="Face Image Detection Methods: A Survey",
+	booktitle="International Proceedings on Advances in Soft Computing, Intelligent Systems and Applications ",
+	year="2018",
+	publisher="Springer Singapore",
+	address="Singapore",
+	pages="209--216",
+	isbn="978-981-10-5272-9"
+}
